--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ a:visited {
 	font-weight: normal;
 	font-size: 250%;
 }
+
 .padding {
 	padding: 80px 0;
 }
@@ -137,7 +138,7 @@ footer {
 }
 .fa {
 	padding: 15px;
-	font-size: 30px;
+	font-size: 35px;
 	color: #FFF;
 }
 .fa:hover {
@@ -156,10 +157,10 @@ footer {
 		font-size: 400%;
 	}
 	.landing-text h3 {
-		font-size: 150%;
+		font-size: 170%;
 	}
 	.fa {
-		font-size: 20px;
+		font-size: 30px;
 		padding: 10px;
 	}
 	.icon {
@@ -181,8 +182,6 @@ footer {
 	}
 	.devicon {
 		font-size: 65px;
-	}
-	.devicon {
 		padding-bottom: 20px;
 	}
 	.devicon img {
@@ -213,6 +212,11 @@ footer {
 
 	.devicon {
 		padding-bottom: 20px;
+		font-size: 85px;
+	}
+	.fa {
+		font-size: 25px;
+		padding: 10px;
 	}
 }
 
