--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ p{
 }
 
 .devicon img {
-	width: 	30%;
+	width: 	25%;
 }
 .devicon {
 		padding-bottom: 30px;
@@ -196,7 +196,7 @@ footer {
 
 }
 
-@media (max-width: 1024px) and (min-width: 769px) {
+@media (min-width: 769px) and (max-width: 1024px){
 	.navbar-brand img {
 	height: 55px;
 	width: 55px;
@@ -209,7 +209,6 @@ footer {
 	.devicon img {
 	width: 	40%;
 	}
-
 	.devicon {
 		padding-bottom: 20px;
 		font-size: 85px;
@@ -222,7 +221,6 @@ footer {
 }
 
 @media (max-width: 460px) {
-	
 	.fa {
 		font-size: 20px;
 		padding: 0 5px;
