--- a/style.css
+++ b/style.css
@@ -74,15 +74,17 @@ a:visited {
 	vertical-align: bottom;
 	font-family: 'Quicksand', sans-serif;
 	color: #fff;
-	padding-bottom: 100px;
+	padding-bottom: 80px;
 }
 .landing-text h1 {
 	font-size: 650%;
 	font-weight: normal;
+	margin-bottom: 0;
 }
 .landing-text h3 {
 	font-weight: normal;
 	font-size: 250%;
+	margin-top: 0;
 }
 
 .padding {
