--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:visited {
 }
 
 .padding {
-	padding: 80px 0;
+	padding: 70px 0;
 }
 .padding img {
 	width: 100%;
@@ -220,6 +220,9 @@ footer {
 		font-size: 30px;
 		padding: 10px;
 	}
+	.padding {
+	padding: 40px 0;
+}
 
 }
 
