Added scroll reveal
scroll reveal animations

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 /*navigation-----------------*/
 
 .navbar {
-	background-color: #2d5986;/*#23415C;*/
+	background-color: #2d5986;
 	padding: 5px 25px 5px 10px;
 	font-size: 1.2em;
 }
