Updated Html, img, script
- changed navbar to transparent
- updated header img
- moved scrollreveal script to a seperate file
- adjusted project sections

--- a/style.css
+++ b/style.css
@@ -10,27 +10,53 @@ html, body {
 /*navigation-----------------*/
 
 .navbar {
-	background-color: #2d5986;
+	background-color: transparent;
 	padding: 5px 25px 5px 10px;
 	font-size: 1.2em;
+	transition: background-color 1s ease 0s;
+}
+.navbar-default {
+	border-color: transparent;
 }
 
 .navbar-brand {
 	min-height: 55px;
 	padding: 0 15px 5px;	
 }
+/* Solid class attached on scroll past first section */
+
+.navbar.solid {
+  background-color: #2d5986;
+  transition: background-color 1s ease 0s;
+  box-shadow: 0 0 4px grey;
+
+    /*.navbar-nav {
+
+       > li {
+
+          > a {
+            color: #C57ED3;
+            transition: color 1s ease 0s;
+          }
+
+       } //end li
+
+    } //end .navbar-nav*/
+
+}
+
 .navbar-brand img {
 	height: 55px;
 	width: 55px;
 	border-radius: 5px;
-
 }
 .navbar-default .navbar-nav li a {
-	color: #FFF;
-	font-family: 'Poppins', sans-serif;
+	color:  #d9d9d9;
+	font-family: Poppins;
+	font-weight: 300;
 }
 .navbar-default .navbar-nav li a:hover {
-	color: 	#ff3333;
+	color: #fff;
 }
 
 .resume {
@@ -60,21 +86,21 @@ a:visited {
 /*header-----------------*/
 
 #home {
-	background: url(img/nyskyline1.jpg) no-repeat center center fixed;
+	background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(img/nyskyline2.jpg) no-repeat center center fixed;
 	display: table;
 	height: 600px;
 	position: relative;
 	width: 100%;
 	background-size: cover;
-
 }
+
 /*main page-----------------*/
 .landing-text {
 	display: table-cell;
 	text-align: center;
 	vertical-align: bottom;
 	font-family: 'Quicksand', sans-serif;
-	color: #fff;
+	color:  #d9d9d9;
 	padding-bottom: 80px;
 }
 .landing-text h1 {
@@ -104,6 +130,7 @@ a:visited {
 	font-family: 'Poppins', sans-serif;
 	padding-bottom: 50px;
 }
+
 .padding-proj h3, h4 {
 	font-family: 'Merriweather', sans-serif;
 	font-weight: bold;
@@ -111,6 +138,9 @@ a:visited {
 
 .padding-proj {
 	padding-bottom: 20px;
+}
+.padding-proj1 {
+	padding: 30px;
 }
 p{
 	font-size: 1.2em;
@@ -251,10 +281,6 @@ footer {
 		height: 40px;
 		width: 	40px;
 	}
-	 #home {
-	    max-width: 100%;
-        background: url(img/nyskyline1.jpg) no-repeat top center;
-    }
 
 
 }		
