--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ a:visited {
 }
 
 .padding {
-	padding: 70px 0;
+	padding: 70px 0 20px;
 }
 .padding img {
 	width: 100%;
@@ -143,8 +143,12 @@ a:visited {
 .padding-proj {
 	padding-bottom: 20px;
 }
+.padding-top-bottom {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
 .padding-proj1 {
-	padding: 30px;
+	padding-bottom: 30px;
 }
 p{
 	font-size: 1.2em;
