--- a/style.css
+++ b/style.css
@@ -117,7 +117,9 @@ a:visited {
 	font-size: 250%;
 	margin-top: 0;
 }
-
+.img-circle {
+	border: 5px solid #e6e6e6
+}
 .padding {
 	padding: 70px 0 20px;
 }
@@ -125,7 +127,7 @@ a:visited {
 	width: 100%;
 }
 .padding-footer {
-	padding: 50px 0 0;
+	padding: 50px 0 0 0;
 }
 .header-padding {
 	padding: 0 0 30px;
@@ -235,7 +237,7 @@ footer {
 	width: 	15%;
 	}
 	.about-pic {
-		padding-bottom: 20px;
+		margin-bottom: 20px;
 	}
 
 }
