--- a/style.css
+++ b/style.css
@@ -118,7 +118,9 @@ a:visited {
 	margin-top: 0;
 }
 .img-circle {
-	border: 5px solid #e6e6e6
+	border: 2px solid #e6e6e6;
+    padding: 5px;
+    box-shadow: 0 2px 3px rgba(0,0,0, 0.1);
 }
 .padding {
 	padding: 70px 0 20px;
